--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,12 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
