--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "types": ["vitest/globals"]
   },
   "files": [],
   "references": [
