landing page content with animation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals"],
+    "moduleResolution": "node"
   },
   "files": [],
   "references": [
