--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
+    "gsap": "^3.13.0",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18"
   },
