--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,8 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "types": ["vitest/globals"],
   },
   "include": [
     "src/**/*.ts",
