--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -23,7 +23,8 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "types": ["vitest/globals"],
   },
   "include": ["vite.config.ts"]
 }
