--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
     "gsap": "^3.13.0",
+    "jsdom": "^26.1.0",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/vue": "^8.1.0",
     "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
-    "happy-dom": "^18.0.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vitest": "^3.2.4",
